fix: footer on mobile

--- a/src/scss/layouts/footer.scss
+++ b/src/scss/layouts/footer.scss
@@ -11,6 +11,10 @@
 .footer__rss-logo {
   filter: invert(1);
   height: 50px;
+
+  @media (max-width: 420px) {
+    height: 35px;
+  }
 }
 
 .footer__created-by {
@@ -25,6 +29,11 @@
       color: #c4c4c4;
       transform: scale(1.02);
     }
+  }
+
+  @media (max-width: 420px) {
+    font-size: 1rem;
+    line-height: 1.3rem;
   }
 }
 
